# example-projects

./: .gitignore  Cargo.toml  README.md
.github/workflows/: main.yml
HangMan/: Cargo.toml  Dioxus.toml  README.md  input.css
HangMan/src/: hangman.rs  main.rs
bluetooth-scanner/: README.md
docs/todomvc/: index-a7e35c24844438bc.js  index-a7e35c24844438bc_bg.wasm  index.html
dog-app/: Cargo.toml  README.md
dog-app/src/: main.rs  models.rs  old.rs
ecommerce-site/: Cargo.toml  README.md
ecommerce-site/docs/: index.html
ecommerce-site/src/: api.rs  main.rs
ecommerce-site/src/components/: error.rs  home.rs  nav.rs  product_page.rs
file-explorer/: Cargo.toml  README.md
file-explorer/assets/: main.css
file-explorer/src/: main.rs  style.css
image_generator_open_ai/: Cargo.toml
image_generator_open_ai/src/: main.rs
ios_demo/: Cargo.toml  README.md  mobile.toml
ios_demo/src/: lib.rs
jsframework-benchmark/: .gitignore  Cargo.toml  index.html
jsframework-benchmark/src/: main.rs
router-book-project/: Cargo.toml  README.md  index.html
router-book-project/src/: main.rs
src/: main.rs
todomvc/: Cargo.toml  README.md  index.html
todomvc/docs/: index.html
todomvc/docs/wasm/: module.js  module_bg.wasm
todomvc/examples/: hooks.rs  hooks_shared_state.rs  model_borrowed.rs
todomvc/src/: lib.rs  main.rs
weatherapp/: Cargo.toml  README.md
weatherapp/src/: main.rs
wifi-scanner/: Cargo.toml
wifi-scanner/src/: main.rs
