[workspace]
members = [
    "dog-app",
    "ecommerce-site",
    "file-explorer",
    "image_generator_open_ai",
    "ios_demo",
    "jsframework-benchmark",
    "todomvc",
    "weatherapp",
    "wifi-scanner",
]

# This is a "virtual package"
# It is not meant to be published, but is used so "cargo run --example XYZ" works properly
[package]
name = "dioxus-example-projects"
version = "0.0.0"
edition = "2021"
description = "Top level crate for the Dioxus examples repository"
authors = ["Jonathan Kelley"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/DioxusLabs/dioxus/"
homepage = "https://dioxuslabs.com"
documentation = "https://dioxuslabs.com"
keywords = ["dom", "ui", "gui", "react", "wasm"]
rust-version = "1.60.0"
publish = false
