[package]
name = "ecommerce-site"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4.3"
dioxus = { path = "../../../dioxus", features = ["ssr"] }
tokio = { version = "1.15.0", features = ["full"] }
