[package]
name = "ecommerce-site"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.16", features = ["ws"] }
cached = "0.43.0"
dioxus = { path = "C:/Users/Desktop/github/dioxus/packages/dioxus" }
dioxus-ssr = { path = "C:/Users/Desktop/github/dioxus/packages/ssr" }
dioxus-liveview = { path = "C:/Users/Desktop/github/dioxus/packages/liveview", features = ["axum"] }
reqwest = { version = "0.11.16", features = ["json"] }
serde = "1.0.160"
tokio = { version = "1.15.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["fs"] }
chrono = { version = "0.4.24", features = ["serde"] }
