[package]
name = "file-explorer"
edition = "2021"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["desktop"] }

# Debug
log = "0.4.19"
dioxus-logger = "0.4.1"
open = "5.1.2"

[package.metadata.bundle]
name = "Dioxus File Explorerer"
identifier = "com.doe.exampleapplication"
icon = ["32x32.png", "128x128.png", "128x128@2x.png"]
version = "1.1.0"
authors = ["tkr-sh <tkirishima@proton.me>", "Jonathan Kelley <jkelleyrtp@gmail.com>"]
resources = ["assets", "images/**/*.png", "secrets/public_key.txt"]
copyright = "Copyright (c) Jane Doe 2016. All rights reserved."
category = "Developer Tool"
short_description = "An example application."
