[package]
name = "image_generator_open_ai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.2.4", features = ["desktop"] }
openssl = { version = "0.10", features = ["vendored"] }
openssl-sys = "0.9"
reqwest = "0.11.13"
tokio = { version = "1", features = ["full"] } 
serde_json = "1.0.91"
serde = "1.0.152"