[package]
name = "dioxus-ios-demo"
version = "0.1.0"
authors = ["Jonathan Kelley <jkelleyrtp@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "dioxus-ios-demo-desktop"
path = "gen/bin/desktop.rs"

[dependencies]
mobile-entry-point = "0.1.0"
dioxus = { version = "0.3" }
dioxus-mobile = { version = "0.3" }
simple_logger = "1.11.0"
im-rc = "15.0.0"



# [target.'cfg(target_os = "android")'.dependencies]
# android_logger = "0.9.0"
# log = "0.4.11"
# ndk-glue = "0.2.1"

# [target.'cfg(not(target_os = "android"))'.dependencies]
# simple_logger = "1.11.0"
