[package]
name = "jsframework-benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.4", features = ["small_rng"] }
getrandom = { version = "*", features = ["js"] }
wasm-bindgen = { version = "0.2.79", features = ["enable-interning"] }

# for local iteration
# dioxus = { path = "../../../dioxus", features = ["web"] }
dioxus = { version = "0.1.7", features = ["web"] }
