[package]
name = "wifi-scanner"
version = "0.1.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
pretty_env_logger = "0.5.0"
tokio = { version = "1.12.0", features = ["full"] }
dioxus = { version = "0.4.0" }
dioxus-desktop = { version = "0.4.0" }
wifiscanner = "0.5.1"
futures-channel = "0.3.19"
futures = "0.3.19"
